# epoll-spy

./: .dir-locals.el  Cargo.toml  README.md
ebpf/: sys_filter.c  vmlinux.h
epoll-spy/: Cargo.toml
epoll-spy-common/: Cargo.toml
epoll-spy-ebpf/: Cargo.toml  rust-analyzer.json
epoll-spy-ebpf/src/: epoll_ctl.rs  main.rs
epoll-spy/src/: epoll_ctl.rs  follow_threads.rs  main.rs
epoll-spy/src/epoll/: epoll_ctl.rs  mod.rs
xtask/src/: build_ebpf.rs  run.rs
