[package]
name = "epoll-spy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
epoll-spy-common = { path = "../epoll-spy-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { version = "4.5.18", features = ["derive"] }

[[bin]]
name = "epoll-spy"
path = "src/main.rs"
